// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HL7v2 Message should handle repeated segments 1`] = `
{
  "MSH": {
    "1": "|",
    "10": "MO999938854000000232",
    "11": "T",
    "12": "2.5.1",
    "13": "",
    "14": "",
    "15": "ER",
    "16": "AL",
    "17": "",
    "18": "",
    "19": "",
    "2": "^~\\&",
    "20": "",
    "21": {
      "1": "Z22",
      "2": "CDCPHINVS",
    },
    "3": "TestApplication",
    "4": "MO9999",
    "5": "WebIZ",
    "6": "MODHSS",
    "7": "20190520152420.922-0600",
    "8": "",
    "9": {
      "1": "VXU",
      "2": "V04",
      "3": "VXU_V04",
    },
  },
  "ORDER": {
    "ORC": {
      "1": "RE",
      "2": "",
      "3": {
        "1": "9999",
        "2": "MODHSS",
      },
    },
    "RXA": {
      "1": "0",
      "10": {
        "1": "",
        "10": "",
        "11": "",
        "12": "",
        "13": "",
        "14": "",
        "15": "",
        "16": "",
        "17": "",
        "18": "",
        "19": "",
        "2": "Sticker",
        "20": "",
        "21": "RN",
        "3": "Nurse",
        "4": "",
        "5": "",
        "6": "",
        "7": "",
        "8": "",
        "9": "",
      },
      "11": {
        "1": "",
        "2": "",
        "3": "",
        "4": "MO9999",
      },
      "12": "",
      "13": "",
      "14": "",
      "15": "lotnum",
      "16": "20000101",
      "17": {
        "1": "SKB",
        "2": "GlaxoSmithKline",
        "3": "MVX",
      },
      "18": "",
      "19": "",
      "2": "1",
      "20": "CP",
      "21": "A",
      "3": "19990101",
      "4": "",
      "5": {
        "1": "08",
        "2": "Hep B, ped/adol",
        "3": "CVX",
      },
      "6": "0.5",
      "7": {
        "1": "mL",
        "2": "",
        "3": "UCUM",
      },
      "8": "",
      "9": {
        "1": "00",
        "2": "New admin",
        "3": "NIP001",
      },
    },
    "RXR": {
      "1": {
        "1": "C28161",
        "2": "Intramuscular",
        "3": "NCIT",
        "4": "IM",
        "5": "Intramuscular",
        "6": "HL70162",
      },
      "2": {
        "1": "RT",
        "2": "Right Thigh",
        "3": "HL70163",
      },
    },
  },
  "PERSON_OBSERVATION": {
    "OBX": [
      {
        "1": "1",
        "10": "",
        "11": "F",
        "12": "",
        "13": "",
        "14": "19990101",
        "15": "",
        "16": "",
        "17": {
          "1": "VXC40",
          "2": "vaccine level",
          "3": "CDCPHINVS",
        },
        "2": "CE",
        "3": {
          "1": "64994-7",
          "2": "Eligibility Status",
          "3": "LN",
        },
        "4": "1",
        "5": {
          "1": "V02",
          "2": "Medicaid",
          "3": "HL70064",
        },
        "6": "",
        "7": "",
        "8": "",
        "9": "",
      },
      {
        "1": "2",
        "10": "",
        "11": "F",
        "12": "",
        "13": "",
        "14": "19990101",
        "2": "CE",
        "3": {
          "1": "30963-3",
          "2": "Vaccine funding source",
          "3": "LN",
        },
        "4": "2",
        "5": {
          "1": "VXC51",
          "2": "Public VFC",
          "3": "NIP008",
        },
        "6": "",
        "7": "",
        "8": "",
        "9": "",
      },
      {
        "1": "3",
        "10": "",
        "11": "F",
        "12": "",
        "13": "",
        "14": "19990101",
        "2": "CE",
        "3": {
          "1": "30956-7",
          "2": "vaccine type",
          "3": "LN",
        },
        "4": "3",
        "5": {
          "1": "45",
          "2": "Hep B, UF",
          "3": "CVX",
        },
        "6": "",
        "7": "",
        "8": "",
        "9": "",
      },
      {
        "1": "4",
        "10": "",
        "11": "F",
        "12": "",
        "13": "",
        "14": "19990101",
        "2": "TS",
        "3": {
          "1": "29768-9",
          "2": "VIS Publication Date",
          "3": "LN",
        },
        "4": "3",
        "5": "19970101",
        "6": "",
        "7": "",
        "8": "",
        "9": "",
      },
      {
        "1": "5",
        "10": "",
        "11": "F",
        "12": "",
        "13": "",
        "14": "19990101",
        "2": "TS",
        "3": {
          "1": "29769-7",
          "2": "VIS Presentation Date",
          "3": "LN",
        },
        "4": "3",
        "5": "19990101",
        "6": "",
        "7": "",
        "8": "",
        "9": "",
      },
    ],
  },
  "PID": {
    "1": "1",
    "2": "",
    "3": [
      {
        "1": "000000002",
        "2": "",
        "3": "",
        "4": "MO9999",
        "5": "MR",
      },
      {
        "1": "111111111",
        "2": "",
        "3": "",
        "4": "MO9999",
        "5": "SS",
      },
    ],
    "4": "",
    "5": {
      "1": "SIMPSON",
      "2": "BART",
      "3": "M",
      "4": "",
      "5": "",
      "6": "",
      "7": "L",
    },
    "6": "",
    "7": "19990101",
    "8": "M",
  },
}
`;

exports[`HL7v2 Message should include the custom segment ZTP 1`] = `
{
  "MSH": {
    "1": "|",
    "10": "82636",
    "11": "T",
    "12": "2.5.1",
    "13": "",
    "14": "",
    "15": "",
    "16": "",
    "17": "",
    "18": "",
    "19": "",
    "2": "^~\\&",
    "20": "",
    "21": "",
    "22": "",
    "23": "",
    "3": "",
    "4": "APPT_NEW",
    "5": "",
    "6": "",
    "7": "20210917093833",
    "8": "78797",
    "9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "NTE": {
    "1": "1",
    "2": "",
    "3": "-- Self-pay patient PT Phone: 5155555552 PT Email: mczernek8@gmail.com",
    "4": "SCHNote",
    "5": "",
    "6": "",
  },
  "PATIENT": {
    "PV1": {
      "1": "",
      "10": "",
      "11": "",
      "12": "",
      "13": "",
      "14": "",
      "15": "",
      "16": "",
      "17": "",
      "18": "",
      "19": "120152985",
      "2": "",
      "20": "",
      "21": "",
      "22": "",
      "23": "",
      "24": "",
      "25": "",
      "26": "",
      "27": "",
      "28": "",
      "29": "",
      "3": {
        "1": "FCMEIJERSUS",
        "10": "",
        "11": "",
        "2": "",
        "3": "",
        "4": "FMCCP",
        "5": "",
        "6": "",
        "7": "",
        "8": "",
        "9": "Froedtert and Medical College of Wisconsin FastCare Clinic, Sussex Me*",
      },
      "30": "",
      "31": "",
      "32": "",
      "33": "",
      "34": "",
      "35": "",
      "36": "",
      "37": "",
      "38": "",
      "39": "",
      "4": "",
      "40": "",
      "41": "",
      "42": "",
      "43": "",
      "44": "20210917",
      "45": "",
      "46": "",
      "47": "",
      "48": "",
      "49": "",
      "5": "",
      "50": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "",
    },
  },
  "RESOURCES": {
    "RGS": {
      "1": "1",
      "2": "",
      "3": {
        "1": "860031001",
        "2": "SUSSEX FASTCARE MEIJER",
        "3": "",
        "4": "262-532-8691",
        "5": "SUSSEX FASTCARE MEIJER",
      },
    },
  },
  "SCH": {
    "1": "",
    "10": "MIN",
    "11": {
      "1": "",
      "2": "",
      "3": "40",
      "4": "20210917094500",
      "5": "20210917102500",
    },
    "12": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "13": "",
    "14": "",
    "15": "",
    "16": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "17": "",
    "18": "",
    "19": "",
    "2": "120152985",
    "20": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": "Sch",
    "26": "",
    "27": "",
    "3": "",
    "4": "",
    "5": "",
    "6": "Sch",
    "7": {
      "1": "5072",
      "2": "ONLINE SCHEDULED WALK-IN",
    },
    "8": "",
    "9": "40",
  },
  "ZCH": {
    "1": "",
    "2": "",
  },
  "ZTP": [
    {
      "1": {
        "1": "102850401",
        "2": "Cadence Automated Calling System Preference",
      },
      "2": [
        {
          "1": "Phone",
          "2": "Y",
        },
        {
          "1": "Text",
          "2": "Y",
        },
      ],
    },
    {
      "1": {
        "1": "102852401",
        "2": "Appointment Information",
      },
      "2": [
        {
          "1": "Email",
          "2": "Y",
        },
        {
          "1": "Push",
          "2": "Y",
        },
      ],
    },
  ],
}
`;

exports[`Segment Schema should group 1`] = `
{
  "MSH": {
    "1": "|",
    "10": "82636",
    "11": "T",
    "12": "2.5.1",
    "13": "",
    "14": "",
    "15": "",
    "16": "",
    "17": "",
    "18": "",
    "19": "",
    "2": "^~\\&",
    "20": "",
    "21": "",
    "22": "",
    "23": "",
    "3": "",
    "4": "APPT_NEW",
    "5": "",
    "6": "",
    "7": "20210917093833",
    "8": "78797",
    "9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "NTE": {
    "1": "1",
    "2": "",
    "3": "-- Self-pay patient PT Phone: 5155555552 PT Email: mczernek8@gmail.com",
    "4": "SCHNote",
    "5": "",
    "6": "",
  },
  "PATIENT": {
    "PID": {
      "1": "1",
      "10": "",
      "11": {
        "1": "1001 rue de la paix",
        "2": "",
        "3": "Bizerte",
        "4": "BZ",
        "5": "60610",
        "6": "",
        "7": "P",
      },
      "12": "",
      "13": [
        {
          "1": "(515)555-5552",
          "2": "P",
          "3": "7",
          "4": "",
          "5": "",
          "6": "515",
          "7": "5555552",
        },
        {
          "1": "",
          "2": "NET",
          "3": "Internet",
          "4": "mczernek8@gmail.com",
        },
      ],
      "14": "",
      "15": "",
      "16": "",
      "17": "",
      "18": "",
      "19": "000-00-0000",
      "2": "",
      "20": "",
      "21": "",
      "22": "",
      "23": "",
      "24": "",
      "25": "",
      "26": "",
      "27": "",
      "28": "",
      "29": "",
      "3": [
        {
          "1": "E2180692",
          "2": "",
          "3": "",
          "4": "EPI",
          "5": "EPI",
        },
        {
          "1": "80034002",
          "2": "",
          "3": "",
          "4": "",
          "5": "FH",
        },
        {
          "1": "8130726",
          "2": "",
          "3": "",
          "4": "",
          "5": "CM",
        },
        {
          "1": "4880723",
          "2": "",
          "3": "",
          "4": "",
          "5": "FMCCP",
        },
        {
          "1": "381080700",
          "2": "",
          "3": "",
          "4": "",
          "5": "4",
        },
      ],
      "30": "N",
      "31": "",
      "32": "",
      "4": "",
      "5": {
        "1": "Somai",
        "2": "Melek",
      },
      "6": "",
      "7": "19970401",
      "8": "M",
      "9": "",
    },
    "PV1": {
      "1": "",
      "10": "",
      "11": "",
      "12": "",
      "13": "",
      "14": "",
      "15": "",
      "16": "",
      "17": "",
      "18": "",
      "19": "120152985",
      "2": "",
      "20": "",
      "21": "",
      "22": "",
      "23": "",
      "24": "",
      "25": "",
      "26": "",
      "27": "",
      "28": "",
      "29": "",
      "3": {
        "1": "FCMEIJERSUS",
        "10": "",
        "11": "",
        "2": "",
        "3": "",
        "4": "FMCCP",
        "5": "",
        "6": "",
        "7": "",
        "8": "",
        "9": "Froedtert and Medical College of Wisconsin FastCare Clinic, Sussex Me*",
      },
      "30": "",
      "31": "",
      "32": "",
      "33": "",
      "34": "",
      "35": "",
      "36": "",
      "37": "",
      "38": "",
      "39": "",
      "4": "",
      "40": "",
      "41": "",
      "42": "",
      "43": "",
      "44": "20210917",
      "45": "",
      "46": "",
      "47": "",
      "48": "",
      "49": "",
      "5": "",
      "50": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "",
    },
  },
  "RESOURCES": {
    "RGS": {
      "1": "1",
      "2": "",
      "3": {
        "1": "860031001",
        "2": "SUSSEX FASTCARE MEIJER",
        "3": "",
        "4": "262-532-8691",
        "5": "SUSSEX FASTCARE MEIJER",
      },
    },
  },
  "SCH": {
    "1": "",
    "10": "MIN",
    "11": {
      "1": "",
      "2": "",
      "3": "40",
      "4": "20210917094500",
      "5": "20210917102500",
    },
    "12": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "13": "",
    "14": "",
    "15": "",
    "16": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "17": "",
    "18": "",
    "19": "",
    "2": "120152985",
    "20": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": "Sch",
    "26": "",
    "27": "",
    "3": "",
    "4": "",
    "5": "",
    "6": "Sch",
    "7": {
      "1": "5072",
      "2": "ONLINE SCHEDULED WALK-IN",
    },
    "8": "",
    "9": "40",
  },
}
`;

exports[`Segment Schema should match the json schema 1`] = `
{
  "MSH": {
    "1": "|",
    "10": "82636",
    "11": "T",
    "12": "2.5.1",
    "13": "",
    "14": "",
    "15": "",
    "16": "",
    "17": "",
    "18": "",
    "19": "",
    "2": "^~\\&",
    "20": "",
    "21": "",
    "22": "",
    "23": "",
    "3": "",
    "4": "APPT_NEW",
    "5": "",
    "6": "",
    "7": "20210917093833",
    "8": "78797",
    "9": {
      "1": "SIU",
      "2": "S12",
    },
  },
  "NTE": {
    "1": "1",
    "2": "",
    "3": "-- Self-pay patient PT Phone: 5155555552 PT Email: mczernek8@gmail.com",
    "4": "SCHNote",
    "5": "",
    "6": "",
  },
  "PATIENT": {
    "PID": {
      "1": "1",
      "10": "",
      "11": {
        "1": "1001 rue de la paix",
        "2": "",
        "3": "Bizerte",
        "4": "BZ",
        "5": "60610",
        "6": "",
        "7": "P",
      },
      "12": "",
      "13": [
        {
          "1": "(515)555-5552",
          "2": "P",
          "3": "7",
          "4": "",
          "5": "",
          "6": "515",
          "7": "5555552",
        },
        {
          "1": "",
          "2": "NET",
          "3": "Internet",
          "4": "mczernek8@gmail.com",
        },
      ],
      "14": "",
      "15": "",
      "16": "",
      "17": "",
      "18": "",
      "19": "000-00-0000",
      "2": "",
      "20": "",
      "21": "",
      "22": "",
      "23": "",
      "24": "",
      "25": "",
      "26": "",
      "27": "",
      "28": "",
      "29": "",
      "3": [
        {
          "1": "E2180692",
          "2": "",
          "3": "",
          "4": "EPI",
          "5": "EPI",
        },
        {
          "1": "80034002",
          "2": "",
          "3": "",
          "4": "",
          "5": "FH",
        },
        {
          "1": "8130726",
          "2": "",
          "3": "",
          "4": "",
          "5": "CM",
        },
        {
          "1": "4880723",
          "2": "",
          "3": "",
          "4": "",
          "5": "FMCCP",
        },
        {
          "1": "381080700",
          "2": "",
          "3": "",
          "4": "",
          "5": "4",
        },
      ],
      "30": "N",
      "31": "",
      "32": "",
      "4": "",
      "5": {
        "1": "Somai",
        "2": "Melek",
      },
      "6": "",
      "7": "19970401",
      "8": "M",
      "9": "",
    },
    "PV1": {
      "1": "",
      "10": "",
      "11": "",
      "12": "",
      "13": "",
      "14": "",
      "15": "",
      "16": "",
      "17": "",
      "18": "",
      "19": "120152985",
      "2": "",
      "20": "",
      "21": "",
      "22": "",
      "23": "",
      "24": "",
      "25": "",
      "26": "",
      "27": "",
      "28": "",
      "29": "",
      "3": {
        "1": "FCMEIJERSUS",
        "10": "",
        "11": "",
        "2": "",
        "3": "",
        "4": "FMCCP",
        "5": "",
        "6": "",
        "7": "",
        "8": "",
        "9": "Froedtert and Medical College of Wisconsin FastCare Clinic, Sussex Me*",
      },
      "30": "",
      "31": "",
      "32": "",
      "33": "",
      "34": "",
      "35": "",
      "36": "",
      "37": "",
      "38": "",
      "39": "",
      "4": "",
      "40": "",
      "41": "",
      "42": "",
      "43": "",
      "44": "20210917",
      "45": "",
      "46": "",
      "47": "",
      "48": "",
      "49": "",
      "5": "",
      "50": "",
      "6": "",
      "7": "",
      "8": "",
      "9": "",
    },
  },
  "RESOURCES": {
    "RGS": {
      "1": "1",
      "2": "",
      "3": {
        "1": "860031001",
        "2": "SUSSEX FASTCARE MEIJER",
        "3": "",
        "4": "262-532-8691",
        "5": "SUSSEX FASTCARE MEIJER",
      },
    },
  },
  "SCH": {
    "1": "",
    "10": "MIN",
    "11": {
      "1": "",
      "2": "",
      "3": "40",
      "4": "20210917094500",
      "5": "20210917102500",
    },
    "12": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "13": "",
    "14": "",
    "15": "",
    "16": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "17": "",
    "18": "",
    "19": "",
    "2": "120152985",
    "20": {
      "1": "78797",
      "2": "DEXCARE",
      "3": "BKGUSER",
    },
    "21": "",
    "22": "",
    "23": "",
    "24": "",
    "25": "Sch",
    "26": "",
    "27": "",
    "3": "",
    "4": "",
    "5": "",
    "6": "Sch",
    "7": {
      "1": "5072",
      "2": "ONLINE SCHEDULED WALK-IN",
    },
    "8": "",
    "9": "40",
  },
}
`;

exports[`Segment Schema should retrieve the schema 1`] = `
{
  "$defs": {
    "GENERAL_RESOURCE": {
      "$id": "/schemas/GENERAL_RESOURCE",
      "$schema": "http://json-schema.org/draft-07/schema#",
      "properties": {
        "AIG": {
          "$ref": "segments.schema.json#/definitions/AIG",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "1",
            "optionality": "Required",
            "repeatability": "Unique",
          },
        },
        "NTE": {
          "$ref": "segments.schema.json#/definitions/NTE",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
      },
      "required": [
        "AIG",
      ],
      "type": "object",
    },
    "LOCATION_RESOURCE": {
      "$id": "/schemas/LOCATION_RESOURCE",
      "$schema": "http://json-schema.org/draft-07/schema#",
      "properties": {
        "AIL": {
          "$ref": "segments.schema.json#/definitions/AIL",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "1",
            "optionality": "Required",
            "repeatability": "Unique",
          },
        },
        "NTE": {
          "$ref": "segments.schema.json#/definitions/NTE",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
      },
      "required": [
        "AIL",
      ],
      "type": "object",
    },
    "PATIENT": {
      "$id": "/schemas/PATIENT",
      "$schema": "http://json-schema.org/draft-07/schema#",
      "properties": {
        "DG1": {
          "$ref": "segments.schema.json#/definitions/DG1",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
        "OBX": {
          "$ref": "segments.schema.json#/definitions/OBX",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
        "PD1": {
          "$ref": "segments.schema.json#/definitions/PD1",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Unique",
          },
        },
        "PID": {
          "$ref": "segments.schema.json#/definitions/PID",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "1",
            "optionality": "Required",
            "repeatability": "Unique",
          },
        },
        "PV1": {
          "$ref": "segments.schema.json#/definitions/PV1",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Unique",
          },
        },
        "PV2": {
          "$ref": "segments.schema.json#/definitions/PV2",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Unique",
          },
        },
      },
      "required": [
        "PID",
      ],
      "type": "object",
    },
    "PERSONNEL_RESOURCE": {
      "$id": "/schemas/PERSONNEL_RESOURCE",
      "$schema": "http://json-schema.org/draft-07/schema#",
      "properties": {
        "AIP": {
          "$ref": "segments.schema.json#/definitions/AIP",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "1",
            "optionality": "Required",
            "repeatability": "Unique",
          },
        },
        "NTE": {
          "$ref": "segments.schema.json#/definitions/NTE",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
      },
      "required": [
        "AIP",
      ],
      "type": "object",
    },
    "RESOURCES": {
      "$id": "/schemas/RESOURCES",
      "$schema": "http://json-schema.org/draft-07/schema#",
      "properties": {
        "GENERAL_RESOURCE": {
          "$ref": "/schemas/GENERAL_RESOURCE",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
        "LOCATION_RESOURCE": {
          "$ref": "/schemas/LOCATION_RESOURCE",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
        "PERSONNEL_RESOURCE": {
          "$ref": "/schemas/PERSONNEL_RESOURCE",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
        "RGS": {
          "$ref": "segments.schema.json#/definitions/RGS",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "1",
            "optionality": "Required",
            "repeatability": "Unique",
          },
        },
        "SERVICE": {
          "$ref": "/schemas/SERVICE",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
      },
      "required": [
        "RGS",
      ],
      "type": "object",
    },
    "SERVICE": {
      "$id": "/schemas/SERVICE",
      "$schema": "http://json-schema.org/draft-07/schema#",
      "properties": {
        "AIS": {
          "$ref": "segments.schema.json#/definitions/AIS",
          "metadata": {
            "maxOccurs": "1",
            "minOccurs": "1",
            "optionality": "Required",
            "repeatability": "Unique",
          },
        },
        "NTE": {
          "$ref": "segments.schema.json#/definitions/NTE",
          "metadata": {
            "maxOccurs": "unbounded",
            "minOccurs": "0",
            "optionality": "Optional",
            "repeatability": "Multiple",
          },
        },
      },
      "required": [
        "AIS",
      ],
      "type": "object",
    },
  },
  "$id": "https://www.rethinkhealth.io/hl7v2/SIU_S12.schema.json",
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "description": "JSON Schema definition for HL7v2",
  "properties": {
    "MSH": {
      "$ref": "segments.schema.json#/definitions/MSH",
      "metadata": {
        "maxOccurs": "1",
        "minOccurs": "1",
        "optionality": "Required",
        "repeatability": "Unique",
      },
    },
    "NTE": {
      "$ref": "segments.schema.json#/definitions/NTE",
      "metadata": {
        "maxOccurs": "unbounded",
        "minOccurs": "0",
        "optionality": "Optional",
        "repeatability": "Multiple",
      },
    },
    "PATIENT": {
      "$ref": "/schemas/PATIENT",
      "metadata": {
        "maxOccurs": "unbounded",
        "minOccurs": "0",
        "optionality": "Optional",
        "repeatability": "Multiple",
      },
    },
    "RESOURCES": {
      "$ref": "/schemas/RESOURCES",
      "metadata": {
        "maxOccurs": "unbounded",
        "minOccurs": "1",
        "optionality": "Required",
        "repeatability": "Multiple",
      },
    },
    "SCH": {
      "$ref": "segments.schema.json#/definitions/SCH",
      "metadata": {
        "maxOccurs": "1",
        "minOccurs": "1",
        "optionality": "Required",
        "repeatability": "Unique",
      },
    },
    "TQ1": {
      "$ref": "segments.schema.json#/definitions/TQ1",
      "metadata": {
        "maxOccurs": "unbounded",
        "minOccurs": "0",
        "optionality": "Optional",
        "repeatability": "Multiple",
      },
    },
  },
  "required": [
    "MSH",
    "SCH",
    "RESOURCES",
  ],
  "title": "HL7v2 SIU_S12",
  "type": "object",
}
`;
